--- a/Mobile App/Demo4.2/app/build.gradle
+++ b/Mobile App/Demo4.2/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "fpt.capstone.inqr"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 2
         versionName "1.0.1"
@@ -54,4 +54,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
+    // GG ARCore
+    implementation 'com.google.ar:core:1.16.0'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
+
+    // Azure for handling spatial anchor || minimum sdk api 24
+    implementation "com.microsoft.azure.spatialanchors:spatialanchors_jni:[2.1.1]"
+    implementation "com.microsoft.azure.spatialanchors:spatialanchors_java:[2.1.1]"
+
+    // Vision API for QR Code Detection
+    implementation 'com.google.android.gms:play-services-vision:15.0.2'
 }
