--- a/Mobile App/Demo4.2/app/src/main/AndroidManifest.xml
+++ b/Mobile App/Demo4.2/app/src/main/AndroidManifest.xml
@@ -6,7 +6,10 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
+    <uses-feature android:name="android.hardware.camera.ar" />
+
     <application
+        android:name=".activity.INQRApplication"
         android:allowBackup="true"
         android:icon="@drawable/icon_app"
         android:label="@string/app_name"
@@ -21,10 +24,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--        <activity android:name=".activity.MapActivity" />-->
-<!--        <activity android:name=".activity.MainActivity">-->
 
-<!--        </activity>-->
+        <meta-data android:name="com.google.ar.core" android:value="optional" />
     </application>
 
 </manifest>
