--- a/Mobile App/Demo4.2/app/build.gradle
+++ b/Mobile App/Demo4.2/app/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     //Toasty
-    implementation 'com.github.GrenderG:Toasty:1.4.2'
+//    implementation 'com.github.GrenderG:Toasty:1.4.2'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
