--- a/Mobile App/Demo4.2/app/build.gradle
+++ b/Mobile App/Demo4.2/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'com.google.ar:core:1.16.0'
     implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
 
-    // Azure for handling spatial anchor || minimum sdk api 24
+    // Azure for handling spatial anchor (minimum sdk api 24)
     implementation "com.microsoft.azure.spatialanchors:spatialanchors_jni:2.1.1"
     implementation "com.microsoft.azure.spatialanchors:spatialanchors_java:2.1.1"
 
