Android App: update navigation fragment. - add fragment - add visual models to handle removing some anchors at the same time

--- a/Mobile App/Demo4.2/app/build.gradle
+++ b/Mobile App/Demo4.2/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.ar.sceneform.plugin'
 
 android {
     compileSdkVersion 29
@@ -72,3 +73,9 @@ dependencies {
     implementation 'com.github.mmin18:realtimeblurview:1.2.1'
     implementation 'com.eightbitlab:blurview:1.6.3'
 }
+
+
+sceneform.asset('sampledata/model.obj',
+        'default',
+        'sampledata/model.sfa',
+        'src/main/assets/arrow')
