--- a/Mobile App/Demo4.2/build.gradle
+++ b/Mobile App/Demo4.2/build.gradle
@@ -7,8 +7,11 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.2'
-        
+//        classpath 'com.android.tools.build:gradle:3.6.2'
+        // downgrade to gradle 3.5 to manipulate 3D object with Sceneform
+        classpath 'com.android.tools.build:gradle:3.5.3'
+        classpath 'com.google.ar.sceneform:plugin:1.15.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
