Android App: update function auto change walking-speed

--- a/Mobile App/Demo4.2/app/src/main/AndroidManifest.xml
+++ b/Mobile App/Demo4.2/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:roundIcon="@drawable/icon_app"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.AppActivity">
+        <activity android:name=".activity.AppActivity"
+            android:windowSoftInputMode="adjustPan|adjustResize"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
