--- a/Web Admin/Capstone_Web/src/main/resources/application.properties
+++ b/Web Admin/Capstone_Web/src/main/resources/application.properties
@@ -1,4 +1,10 @@
+#prefix of webpage
 spring.mvc.view.prefix=/WEB-INF/
+
+#timeout for session
+server.servlet.session.timeout=10800s
+
+#file size limit
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
