--- a/Mobile App/Demo4.2/app/build.gradle
+++ b/Mobile App/Demo4.2/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "fpt.capstone.inqr"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 6
-        versionName "2.0.0"
+        versionCode 7
+        versionName "2.0.1"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -73,6 +73,9 @@ dependencies {
     implementation 'com.github.mmin18:realtimeblurview:1.2.1'
     implementation 'com.eightbitlab:blurview:1.6.3'
     implementation 'com.airbnb.android:lottie:3.4.0'
+
+
+    implementation 'com.google.zxing:core:3.3.3'
 }
 
 
