--- a/Mobile App/Demo4.2/app/build.gradle
+++ b/Mobile App/Demo4.2/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "fpt.capstone.inqr"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 15
-        versionName "2.0.7"
+        versionCode 16
+        versionName "2.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -28,7 +28,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha06'
+    implementation 'com.google.android.material:material:1.2.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     //retrofit2
@@ -58,8 +58,8 @@ dependencies {
 
 
     // GG ARCore
-    implementation 'com.google.ar:core:1.16.0'
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.15.0'
+    implementation 'com.google.ar:core:1.17.0'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.0'
 
     // Azure for handling spatial anchor (minimum sdk api 24)
     implementation "com.microsoft.azure.spatialanchors:spatialanchors_jni:2.1.1"
